<resources>
    <string name="app_name">ThinkingPlaces</string>
    <string name="action_settings">Settings</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="save">Save</string>
    <string name="appwidget_text">ThinkingPlaces</string>
    <string name="add_widget">Add widget</string>
</resources>
